# FeedSystem_Python

./: .gitignore  AGENTS.md  CLAUDE.md  next.md  面试.md  项目核心.md
feedSystem_video_python/: .env.example  .gitignore  docker-compose.yml  plan.md  process.md
feedSystem_video_python/backend/: README.md  pyproject.toml  requirements.txt
feedSystem_video_python/backend/app/: __init__.py  config.py  database.py  main.py
feedSystem_video_python/backend/app/api/: __init__.py  account.py  comment.py  feed.py  like.py  social.py  video.py
feedSystem_video_python/backend/app/core/: __init__.py  auth.py  cache_protector.py  events.py  ratelimit.py  redis.py  redis_lock.py  security.py  tags.py
feedSystem_video_python/backend/app/learning/: day1_notes.md  day1_practice.py  day2_notes.md  day2_practice.py  day3_notes.md  day3_practice.py  day4_notes.md  day4_practice.py  day5_notes.md  day5_practice.py  day6_notes.md  day6_practice.py
feedSystem_video_python/backend/app/models/: account.py  comment.py  like.py  social.py  tag.py  video.py
feedSystem_video_python/backend/app/repositories/: account_repo.py  comment_repo.py  feed_repo.py  like_repo.py  social_repo.py  tag_repo.py  video_repo.py
feedSystem_video_python/backend/app/schemas/: __init__.py  account.py  comment.py  feed.py  like.py  social.py  video.py
feedSystem_video_python/backend/app/services/: account_service.py  comment_service.py  feed_service.py  like_service.py  social_service.py  video_service.py
feedSystem_video_python/frontend/: README.md  index.html  (+4 more)
feedsystem_video_go/: CLAUDE.md  README.md
(+11 files in other folders)
